Fixed findbugs issues: - Do not invoke toString() method on a String - Do not invoke inefficient Boolean constructor; use Boolean.valueOf(...) instead - Close Stream in try with resources
Update false positives filter

git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1720506 13f79535-47bb-0310-9956-ffa450edef68